Changelog
=========

2.9 (DEV)
----------------

* Fully Django 1.7 support
* Added i18n support and several languages
* More settings can be overrridden, like the jQuery URL, site name and wether
  you want to enable Gthub Gist.
* Ships a middleware that blocks anonymous proxies and TOR nodes. Not enabled
  by default.

2.8 (2014-08-02)
----------------

* The API create view has a new argument 'filename' which is used to determine
  the lexer out of a given filename.
* Fixed a XSS bug where HTML tags were not properly escaped with the simple
  ``code`` lexer.

2.7 (2014-06-08)
----------------

* "never" as an expiration choice is enable by default! This creates snippets
  in the database which are never purged.
* The API create call now supports to set the exiration time.
* Some simple Bootstrap 3 support.
* Gist fixes on Python 3.

2.6 (2014-04-12)
----------------

* Fix for the rare case of duplicate slug (secret id) generation.
* A new 'code' lexer renders source code with no highlighting.
* Whitespace fixes with tab indention and word wrap mode.
* Installation docs.


2.5 (2014-01-21)
----------------

* IRC lexer is now in the default lexer list.
* One-Time snippet support. Snippets get automatically deleted after the
  another user looks at it.
* Toggle wordwrap for code snippets.
* General UI and readability improvements.

2.4 (2014-01-11)
----------------

* API accepts the format or lexer via GET too. You can call an API url like
  ``example.com/api/?format=json`` and have the body in POST only.
* Added an option to keep snippets forever.
* ABAP lexer is now in the default lexer list.

2.3 (2014-01-07)
----------------

* API Documentation.
* Full test coverage.
* Removed Twitter button from homepage.
* Slug generation is less predictable.

2.2 (2013-12-18)
----------------

* Added documentation: http://dpaste.readthedocs.org/en/latest/
* Added support for CSRF middleware.
* Windows users can submit the form using Ctrl+Enter.