@@ -5,8 +5,8 @@
 # -----------------------------------------------------------------------------
 
 # Project dependencies
-django==1.7.1
-django-mptt==0.6.1
+django==1.8.3
+django-mptt==0.7.4
 pygments==2.0.1
 requests==2.5.1
 
