@@ -50,7 +50,7 @@ setup(
     include_package_data=True,
     install_requires=[
         'django>=1.4',
-        'django-mptt>=0.6.0',
+        'django-mptt>=0.7.4',
         'pygments>=1.6',
         'requests>=2.0.0',
     ],
