@@ -2,26 +2,22 @@
 toxworkdir=/tmp/tox/dpaste
 envlist=
     py27-django-1.4,
-    py27-django-1.6,
     py27-django-1.7,
-    py33-django-1.7,
-    py34-django-1.7,
+    py27-django-latest,
+    py34-django-latest
 
 [testenv]
 commands=
     python runtests.py
 
 [testenv:py27-django-1.4]
-deps=django==1.4.16
-
-[testenv:py27-django-1.6]
-deps=django==1.6.8
+deps=django==1.4.21
 
 [testenv:py27-django-1.7]
-deps=django==1.7.1
+deps=django==1.7.9
 
-[testenv:py33-django-1.7]
-deps=django==1.7.1
+[testenv:py27-django-latest]
+deps=django==1.8.3
 
-[testenv:py34-django-1.7]
-deps=django==1.7.1
+[testenv:py34-django-latest]
+deps=django==1.8.3
